--- a/AssessmentManagement/src/main/resources/application.yml
+++ b/AssessmentManagement/src/main/resources/application.yml
@@ -33,6 +33,18 @@ spring:
         # Database dialect
         dialect: org.hibernate.dialect.MySQL8Dialect
 
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      group-id: assessment
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
+    topic:
+      name: user_topic
+
 # Server configurations
 server:
   port: 8484
