--- a/UserManagement/src/main/resources/application.yml
+++ b/UserManagement/src/main/resources/application.yml
@@ -33,13 +33,13 @@ spring:
         # Database dialect
         dialect: org.hibernate.dialect.MySQL8Dialect
 #kafka
-  kafka:
-    producer:
-      bootstrap-servers: localhost:9092
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    topic:
-      name: user_topic
+#  kafka:
+#    producer:
+#      bootstrap-servers: localhost:9092
+#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+#    topic:
+#      name: user_topic
 
 
 
