--- a/AnnouncementManagement/pom.xml
+++ b/AnnouncementManagement/pom.xml
@@ -78,8 +78,12 @@
 			<artifactId>Shared-Module</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
