reconstruct the Assessment Submission Service

--- a/AssessmentSubmissionService/src/main/resources/application.yml
+++ b/AssessmentSubmissionService/src/main/resources/application.yml
@@ -43,3 +43,7 @@ course:
   management:
     service:
       url: http://localhost:8282
+
+
+app:
+  folder-path: "C:\\Users\\Abish\\Desktop\\Image\\"
