Update Course Management

--- a/CourseManagement/src/main/resources/application.yml
+++ b/CourseManagement/src/main/resources/application.yml
@@ -43,3 +43,5 @@ enrollment:
   check:
     url: http://localhost:9090/courses/{id}/enrollments/check/{userId}
 
+app:
+  folder-path: "C:\\Users\\Abish\\Desktop\\Image\\"
