--- a/React-frontend/.gitignore
+++ b/React-frontend/.gitignore
@@ -7,7 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+node_modules/*
+node_modules/@mui
+node_modules\.vite
+node_modules/.vite
 dist
 dist-ssr
 *.local
