--- a/React-frontend/package.json
+++ b/React-frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
