--- a/AssessmentManagement/pom.xml
+++ b/AssessmentManagement/pom.xml
@@ -83,7 +83,15 @@
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
 
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.16.1</version>
+		</dependency>
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
