--- a/DiscussionService/src/main/resources/application.yml
+++ b/DiscussionService/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
     # Hibernate configurations
     hibernate:
       # DDL auto setting
-      ddl-auto: create-drop
+      ddl-auto: update
     # Show SQL queries
     show-sql: true
     # Hibernate properties
@@ -39,15 +39,4 @@ spring:
 
 
 
-# Management configurations
-management:
-  tracing:
-    sampling:
-      probability: 1.0
 
-# Logging configurations
-logging:
-  level:
-    root: info
-    org.springframework.cloud.gateway.route.RouteDefinitionLocator: INFO
-    org.springframework.cloud.gateway: TRACE
